@@ -40,6 +40,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4018: Schema validation fails with UNION ONSCHEMA (daijy)
+
 PIG-4022: Fix tez e2e test SkewedJoin_6 (daijy)
 
 PIG-4001: POPartialAgg aggregates too aggressively when multiple values aggregated (tmwoodruff via cheolsoo)
